updates to test.rmd and normalized values to combined csv

--- a/test.rmd
+++ b/test.rmd
@@ -1,4 +1,8 @@
-#set working directory first
+---
+author: Alexander Wu
+output: html_document
+---
+
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(echo = TRUE, message = FALSE,
                       warning = FALSE, error = TRUE, fig.height = 3)
@@ -22,10 +26,10 @@ homeprice = read_csv("homeprice.csv")
 education$`Population`= education$`City&Population`
 education$'City' = education$'City&Population'
 education = education %>% 
-  mutate(City = substr(education$City, 1, str_locate(education$City, ", WI / ") - 1)) %>% 
-  mutate(Population = substr(education$Population, str_locate(education$Population, " / ") + 3, nchar(education$Population))) %>% 
-  select(`Average Education Index`, `Population`, `City`)
-education$Population = as.numeric(gsub(",", "", education$Population))
+  mutate(City = substr(education$City, 1, str_locate(education$City, ", WI / ") - 1), Population = substr(education$Population, str_locate(education$Population, " / ") + 3, nchar(education$Population))) %>% 
+  select(`Average Education Index`, `Population`, `City`) %>% 
+  mutate(Population = as.numeric(str_replace(Population, ",", "")))
+#education$Population = as.numeric(gsub(",", "", education$Population))
 ```
 
 ```{r}
@@ -53,13 +57,27 @@ employment = employment %>%
 	select('Age 16 or Older Population Employed Percentage', 'City')
 ```
 
-
-
 ```{r}
 final = left_join(education, crime, "City")
 final = left_join(final, employment, "City")
 final = left_join(final, homeprice, "City")
 final = drop_na(final) 
 final = final[,c(3, 2, 1, 4, 5, 6)]
+max_education_index = max(final$`Average Education Index`)
+min_crime_index = min(final$`Crime Index`)
+
+final = final %>% 
+  filter(Population > 1000) %>% 
+  rename(city = City, population = Population, average_education_index = "Average Education Index", crime_index = "Crime Index", sixteen_plus_employed_percentage = "Age 16 or Older Population Employed Percentage", house_median_value = "House Median Value") %>% 
+  mutate(house_median_value = str_sub(str_replace(house_median_value, ",", ""), 2, -1)) %>% 
+  mutate(sixteen_plus_employed_percentage = str_replace(sixteen_plus_employed_percentage, "%", "")) %>% 
+  mutate(edu_index_norm = average_education_index / max_education_index) 
+final$house_median_value = as.numeric(final$house_median_value)
+final$sixteen_plus_employed_percentage = as.numeric(final$sixteen_plus_employed_percentage)
+ggplot(final, aes(x = crime_index)) +
+  geom_density()
+```
+
+```{r}
 write_csv(final, "city_education_crime_employment_homeprice.csv")
 ```
